# indonesian-folklore-terminal-rpg

./: .gitignore  DOCUMENTATION.md  README.md  install.bat  install.sh  install_universal.py  install_windows.ps1  pyproject.toml
trpg/: __init__.py  ai_engine.py  combat.py  game.py  player.py  save_system.py  shop.py  story.py  ui.py  updater.py
