[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indonesian-folklore-terminal-rpg"
version = "2.0.0"
description = "Educational AI-powered terminal text RPG featuring Indonesian kingdoms, history, and mythology"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
trpg = "trpg.game:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trpg*"]
